--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
     </div>
 
   </div>
+  
+  <section id="start">
+    <div class="row">
+      <div class="col-sm-12">
+        <button type="button" class="bttn">START</button>
+      </div>
+    </div>
+</section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="game.js" charset="utf-8"></script>
 
